--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.2.*",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/monolog-bundle": "^3.7",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/security-bundle": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
@@ -69,6 +70,10 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.30"
+        "symfony/debug-bundle": "^5.2",
+        "symfony/maker-bundle": "^1.30",
+        "symfony/stopwatch": "^5.2",
+        "symfony/var-dumper": "^5.2",
+        "symfony/web-profiler-bundle": "^5.2"
     }
 }
