--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,7 +26,8 @@ security:
                 check_path: login
                 provider: my_provider
             logout:
-                path: app_logout
+                path: /logout
+                target: /
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -40,4 +41,6 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: ROLE_USER }
+          
